--- a/doanasp/doanasp/Views/Home/Index.cshtml
+++ b/doanasp/doanasp/Views/Home/Index.cshtml
@@ -37,43 +37,33 @@
         <!-- row -->
         <div class="row">
             <!-- shop -->
-            <div class="col-md-4 col-xs-6">
+            <div class="col-md-6 col-xs-6">
                 <div class="shop">
                     <div class="shop-img">
                         <img src="~/img/product01.jpg" alt="">
                     </div>
                     <div class="shop-body">
                         <h3>Laptop<br>Collection</h3>
-                        <a asp-controller="ProductTypes" asp-action="PDT" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+                        <a asp-controller="Products" asp-action="PD" asp-route-page="1" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
             <!-- /shop -->
             <!-- shop -->
-            <div class="col-md-4 col-xs-6">
+            <div class="col-md-6 col-xs-6">
                 <div class="shop">
                     <div class="shop-img">
                         <img src="~/img/product01.jpg" alt="">
                     </div>
                     <div class="shop-body">
                         <h3>Laptop<br>Collection</h3>
-                        <a asp-controller="ProductTypes" asp-action="PDT" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+                        <a asp-controller="Products" asp-action="PD" asp-route-page="2" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
             <!-- /shop -->
             <!-- shop -->
-            <div class="col-md-4 col-xs-6">
-                <div class="shop">
-                    <div class="shop-img">
-                        <img src="~/img/product01.jpg" alt="">
-                    </div>
-                    <div class="shop-body">
-                        <h3>Laptop<br>Collection</h3>
-                        <a asp-controller="ProductTypes" asp-action="PDT" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-            </div>
+
             <!-- /shop -->
         </div>
         <!-- /row -->
@@ -94,10 +84,8 @@
                     <h3 class="title">Top selling</h3>
                     <div class="section-nav">
                         <ul class="section-tab-nav tab-nav">
-                            <li class="active"><a data-toggle="tab" href="#tab2">Phòng Khách</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Phòng Bếp</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Phòng Thờ</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Khác</a></li>
+                            <li class="active"><a data-toggle="tab" href="#tab2">Living room</a></li>
+                            <li class=""><a data-toggle="tab" href="#">Chicken</a></li>
                         </ul>
                     </div>
                 </div>
@@ -117,22 +105,11 @@
                                     <div class="product">
                                         <div class="product-img">
                                             <img src="~/img/@item.Image" alt="" width="100" height="200">
-                                            <div class="product-label">
-                                                <span class="sale">-30%</span>
-                                                <span class="new">NEW</span>
-                                            </div>
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">@item.ProductType.TypeName</p>
                                             <h3 class="product-name"><a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
-                                            <h4 class="product-price">$@item.Price <del class="product-old-price">$@item.Price</del></h4>
-                                            <div class="product-rating">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
+                                            <h4 class="product-price">$@item.Price </h4>
                                         </div>
                                         <div class="add-to-cart">
                                             <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> <a asp-controller="Carts" asp-action="Add" asp-route-id="@item.Id">add to cart </a></button>
