--- a/doanasp/doanasp/Views/Invoices/Edit.cshtml
+++ b/doanasp/doanasp/Views/Invoices/Edit.cshtml
@@ -1,9 +1,20 @@
 ﻿@model doanasp.Models.Invoice
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit"; Layout = "_LayoutAdminIndex";
+    string username = "anonymous";
+    if (ViewBag.UserName != null)
+    {
+        username = ViewBag.UserName;
+        @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>}
+    }
+    else
+    {
+        @section Member{}
+    }
 }
-
+@section name{@username}
+<div class="container">
 <h1>Edit</h1>
 
 <h4>Invoice</h4>
@@ -56,6 +67,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
 
+    </div>
