--- a/doanasp/doanasp/Views/Products/QuantitySearch.cshtml
+++ b/doanasp/doanasp/Views/Products/QuantitySearch.cshtml
@@ -23,10 +23,10 @@
                 <a asp-action="Create">Create New</a>
             </p>
             <form class="col-sm-8 row" asp-controller="Products" asp-action="QuantitySearch">
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <input class="input" type="text" id="hang" name="hang" placeholder="Author">
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <input class="input" type="text" id="ten" name="ten" placeholder="Name">
                 </div>
                 <div class="col-sm-3">
@@ -35,7 +35,6 @@
                 <button class="btn btn-primary col-sm-2">Search</button>
             </form>
         </div>
-
         <table class="table">
             <thead>
                 <tr>
@@ -101,18 +100,16 @@
                             @Html.DisplayFor(modelItem => item.Status)
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a> |
-                            <a asp-action="SellProduct" asp-route-id="@item.Id" class="btn btn-primary">DSBH</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                            <a asp-action="SellProduct" asp-route-id="@item.Id">DSBH</a>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
-        <div class="col-sm-5"></div>
-        <div class="col-sm-5"></div>
-        <div class="col-sm-2">
-            <a asp-action="TopSelling" class="btn btn-primary">TopSelling(Mouth)</a>
+        <div>
+            <a asp-action="Index">Back to List</a>
         </div>
-    </div>
+</div>
