--- a/doanasp/doanasp/Views/Carts/CartUser.cshtml
+++ b/doanasp/doanasp/Views/Carts/CartUser.cshtml
@@ -87,8 +87,7 @@
         <div class="mb-3">Tổng Tiền: @ViewBag.CartsTotal.ToString("#,##0") VND</div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary "><a asp-controller="Carts" asp-action="Pay">Pay</a></button>
-        </div>
-        <div class="form-group">
+            &nbsp
             <button type="submit" class="btn btn-primary "><a asp-controller="Carts" asp-action="clearCart">Clear</a></button>
         </div>
     </div>
