--- a/doanasp/doanasp/Views/Products/Detail.cshtml
+++ b/doanasp/doanasp/Views/Products/Detail.cshtml
@@ -59,8 +59,8 @@
                     <div class="product-details">
                         <h2 class="product-name">@Model.Name</h2>
                         <div>
-                            <h3 class="product-price">@Model.Price $</h3>
-                            <span class="product-available">In Stock</span>
+                            <h3 class="product-price">@Model.Price VND</h3>
+                            <span class="product-available">@Model.Stock  :  In Stock</span>
                         </div>
                         <p>@Model.Description</p>
                         <div class="add-to-cart">
