--- a/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
@@ -15,7 +15,7 @@
     <link type="text/css" rel="stylesheet" href="~/css/bootstrap.min.css" />
 
     <!-- Slick -->
-    <link type="text/css" rel="stylesheet" href="~/css/slick.css" />
+    <link type="text/css" rel="stylesheet" href="~/css/slick.css" />x
     <link type="text/css" rel="stylesheet" href="~/css/slick-theme.css" />
 
     <!-- nouislider -->
