--- a/doanasp/doanasp/Views/Accounts/Index.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Index.cshtml
@@ -18,7 +18,7 @@
 @section name{@username}
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
-    <h1>Index</h1>
+    <h1>Accounts Table</h1>
 
     <p>
         <a asp-action="Create">Create New</a>
