--- a/doanasp/doanasp/Views/Carts/Index.cshtml
+++ b/doanasp/doanasp/Views/Carts/Index.cshtml
@@ -17,7 +17,7 @@
 @section name{@username}
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
-    <h1>Index</h1>
+    <h1>Carts Table</h1>
 
     <p>
         <a asp-action="Create">Create New</a>
