--- a/doanasp/doanasp/Views/Home/Index.cshtml
+++ b/doanasp/doanasp/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                         <img src="~/img/product01.jpg" alt="">
                     </div>
                     <div class="shop-body">
-                        <h3>Laptop<br>Collection</h3>
+                        <h3>Page 1<br>Collection</h3>
                         <a asp-controller="Products" asp-action="PD" asp-route-page="1" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         <img src="~/img/product01.jpg" alt="">
                     </div>
                     <div class="shop-body">
-                        <h3>Laptop<br>Collection</h3>
+                        <h3>Page 2<br>Collection</h3>
                         <a asp-controller="Products" asp-action="PD" asp-route-page="2" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
@@ -102,19 +102,22 @@
                                 {
 
                                     <!-- product -->
-                                    <div class="product">
+                                <div class="product">
+                                    <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">
                                         <div class="product-img">
                                             <img src="~/img/@item.Image" alt="" width="100" height="200">
                                         </div>
                                         <div class="product-body">
-                                            <p class="product-category">@item.ProductType.TypeName</p>
-                                            <h3 class="product-name"><a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
-                                            <h4 class="product-price">$@item.Price </h4>
+                                            <p class="product-category">PT Name : @item.ProductType.TypeName</p>
+                                            <h3 class="product-name"><a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">Name : @item.Name</a></h3>
+                                            <h4 class="product-price">@item.Price VND</h4>
+
                                         </div>
+                                    </a>
                                         <div class="add-to-cart">
                                             <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> <a asp-controller="Carts" asp-action="Add" asp-route-id="@item.Id">add to cart </a></button>
                                         </div>
-                                    </div>
+                                </div>
                                     <!-- /product -->
                                 }
 
