--- a/doanasp/doanasp/Views/InvoiceDetails/Index.cshtml
+++ b/doanasp/doanasp/Views/InvoiceDetails/Index.cshtml
@@ -16,7 +16,7 @@
 @section name{@username}
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
-    <h1>Index</h1>
+    <h1>Invoice Details Table</h1>
 
     <p>
         <a asp-action="Create">Create New</a>
