--- a/doanasp/doanasp/Views/Products/Create.cshtml
+++ b/doanasp/doanasp/Views/Products/Create.cshtml
@@ -69,14 +69,11 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" />&nbsp
+                    <a asp-action="Index" class="btn btn-primary">Back to List</a>
                 </div>
             </form>
         </div>
-    </div>
-
-    <div>
-        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </div>
 
 </div>
