--- a/doanasp/doanasp/Views/Products/QuantitySearch.cshtml
+++ b/doanasp/doanasp/Views/Products/QuantitySearch.cshtml
@@ -15,101 +15,118 @@
     }
 }
 @section name{@username}
-    <div class="col-sm-1"></div>
-    <div class="col-sm-10">
-        <div class=" row">
-            <h1>Product Tables</h1>
-            <p class="col-sm-4">
-                <a asp-action="Create">Create New</a>
-            </p>
-            <form class="col-sm-8 row" asp-controller="Products" asp-action="QuantitySearch">
-                <div class="col-sm-4">
-                    <input class="input" type="text" id="hang" name="hang" placeholder="Author">
+<div class="col-sm-1"></div>
+<div class="col-sm-10">
+    <div class=" row">
+        <div class="row">
+            <div class="col-sm-4"><h1>Product Tables</h1></div>
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <div class="header-search">
+                    <form method="get" asp-controller="Products" asp-action="Name">
+                        <div class="row">
+                            <input class="input" tyle="number" name="quantity" placeholder="Search here">&nbsp
+                            <button class="btn btn-primary">Search</button>
+                        </div>
+
+                    </form>
                 </div>
-                <div class="col-sm-4">
-                    <input class="input" type="text" id="ten" name="ten" placeholder="Name">
-                </div>
-                <div class="col-sm-3">
-                    <input class="input" type="number" id="quantity" name="quantity" placeholder="Quantity">
-                </div>
-                <button class="btn btn-primary col-sm-2">Search</button>
-            </form>
+            </div>
         </div>
-        <table class="table">
-            <thead>
+        <p class="col-sm-4">
+            <a asp-action="Create">Create New</a>
+        </p>
+        <form class="col-sm-8 row" asp-controller="Products" asp-action="QuantitySearch">
+            <div class="col-sm-3">
+                <input class="input" type="text" id="hang" name="hang" placeholder="Author">
+            </div>
+            <div class="col-sm-3">
+                <input class="input" type="text" id="ten" name="ten" placeholder="Name">
+            </div>
+            <div class="col-sm-3">
+                <input class="input" type="number" id="quantity" name="quantity" placeholder="Quantity">
+            </div>
+            <button class="btn btn-primary col-sm-2">Search</button>
+        </form>
+    </div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.SKU)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Author)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Stock)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProductType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Image)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
                 <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.SKU)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Author)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Price)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Stock)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ProductType)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Image)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Status)
-                    </th>
-                    <th></th>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SKU)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Author)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Stock)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ProductType.TypeName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Image)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a> |
+                        <a asp-action="SellProduct" asp-route-id="@item.Id" class="btn btn-primary">DSBH</a>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.SKU)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Author)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Price)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Stock)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ProductType.TypeName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Image)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Status)
-                        </td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                            <a asp-action="SellProduct" asp-route-id="@item.Id">DSBH</a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-        <div>
-            <a asp-action="Index">Back to List</a>
-        </div>
+            }
+        </tbody>
+    </table>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-2">
+        <a asp-action="TopSelling" class="btn btn-primary">TopSelling(Mouth)</a>
+    </div>
 </div>
