--- a/doanasp/doanasp/Views/Accounts/Delete.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Delete.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayNameFor(model => model.Password)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Password)
+               **********
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Email)
@@ -67,9 +67,11 @@
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Avatar)
             </dt>
+
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Avatar)
+                <img style=" max-width: 100px; max-height: 100px; border-radius: 50%;" src="~/img/user_images/@Html.DisplayFor(model => model.Avatar)" />
             </dd>
+
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Status)
             </dt>
