--- a/doanasp/doanasp/Views/Accounts/Details.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Details.cshtml
@@ -67,19 +67,15 @@
                 @Html.DisplayNameFor(model => model.Avatar)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Avatar)
+  
+                <img style=" max-width: 100px; max-height: 100px; border-radius: 50%;" src="~/img/user_images/@Html.DisplayFor(model => model.Avatar)" />
+     
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Status)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Status)
-            </dd>
-            <dt class="col-sm-2">
-                Tổng Tiền
-            </dt>
-            <dd class="col-sm-10">
-                @ViewBag.Price.ToString("#,##0")
             </dd>
         </dl>
     </div>
