--- a/doanasp/doanasp/Views/Accounts/Edit.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Edit.cshtml
@@ -21,7 +21,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Edit">
+            <form asp-action="Edit" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="id" />
                 <div class="form-group">
@@ -59,9 +59,16 @@
                         <input class="form-check-input" asp-for="IsAdmin" /> @Html.DisplayNameFor(model => model.IsAdmin)
                     </label>
                 </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        Current Image
+                        <img style=" max-width: 100px; max-height: 100px; border-radius: 50%;" src="~/img/user_images/@Html.DisplayFor(model => model.Avatar)" />
+                    </label>
+                </div>
+                
                 <div class="form-group">
-                    <label asp-for="Avatar" class="control-label"></label>
-                    <input asp-for="Avatar" class="form-control" />
+                    <label asp-for="ImageFile" class="control-label"></label>
+                    <input asp-for="ImageFile" class="form-control" />
                     <span asp-validation-for="Avatar" class="text-danger"></span>
                 </div>
                 <div class="form-group form-check">
