--- a/doanasp/doanasp/Views/Accounts/Index.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Index.cshtml
@@ -44,7 +44,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Fullname)
                 </th>
-                <th>Price </th>
+                <th>Total Value </th>
                 <th>
                     @Html.DisplayNameFor(model => model.IsAdmin)
                 </th>
@@ -65,7 +65,7 @@
                         @Html.DisplayFor(modelItem => item.Username)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Password)
+                        ************
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
@@ -86,7 +86,7 @@
                         @Html.DisplayFor(modelItem => item.IsAdmin)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Avatar)
+                        <img style=" max-width: 100px; max-height: 100px; border-radius: 50%;" src="~/img/user_images/@Html.DisplayFor(modelItem => item.Avatar)" />
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Status)
