--- a/doanasp/doanasp/Views/Products/Delete.cshtml
+++ b/doanasp/doanasp/Views/Products/Delete.cshtml
@@ -69,7 +69,7 @@
                 @Html.DisplayNameFor(model => model.Image)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Image)
+                <img style=" max-width: 100px; max-height: 100px; border-radius: 10%;" src="~/img/product/@Html.DisplayFor(model =>model.Image)" />
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Status)
