--- a/doanasp/doanasp/Views/Products/Index.cshtml
+++ b/doanasp/doanasp/Views/Products/Index.cshtml
@@ -109,7 +109,7 @@
                         @Html.DisplayFor(modelItem => item.ProductType.TypeName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Image)
+                        <img style=" max-width: 100px; max-height: 100px; border-radius: 10%;" src="~/img/product/@Html.DisplayFor(modelItem => item.Image)" />
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Status)
